webhook/main/default/objects/Webhook_Registration__c/Webhook_Registration__c.object-meta.xml
<CustomObject>
    <description>Represents a subscriber to a webhook event. This object should be access/modified via api</description>
    <label>Webhook Registration</label>
    <nameField>
        <displayFormat>WR-{0000}</displayFormat>
        <label>Webhook Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webhook Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>