webhook/main/default/objects/Webhook_Registration__c/fields/Callback_Url__c.field-meta.xml
<CustomField>
    <fullName>Callback_Url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Callback Url</label>
    <type>TextArea</type>
</CustomField>