webhook/main/default/objects/Webhook_Registration__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Type of event that is subscribed. This is matched the Event Type on the Outbound Webhook platform event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Event</label>
    <length>80</length>
    <type>Text</type>
</CustomField>