webhook/main/default/objects/Webhook_Registration__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>represents the serialized custom Http headers to be sent with the webhook</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Header</label>
    <type>TextArea</type>
</CustomField>