webhook/main/default/objects/Webhook_Registration__c/fields/Shared_Secret__c.field-meta.xml
<CustomField>
    <fullName>Shared_Secret__c</fullName>
    <description>Generated shared secret at subscribe time used to sign webhook data body.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Shared Secret</label>
    <length>128</length>
    <type>Text</type>
</CustomField>