webhook/main/default/objects/Webhook_Registration__c/listViews/All_Registered_Webhooks.listView-meta.xml
<ListView>
    <fullName>All_Registered_Webhooks</fullName>
    <columns>NAME</columns>
    <columns>Callback_Url__c</columns>
    <columns>Event__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Registered Webhooks</label>
</ListView>